# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("dulnet-pack") {

  deps = [
    "src:dulnet",
  ]
}

# shared_library("hello_shared") {
#   sources = [
#     "hello_shared.cc",
#     "hello_shared.h",
#   ]

#   defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
# }

# static_library("hello_static") {
#   sources = [
#     "hello_static.cc",
#     "hello_static.h",
#   ]
# }
